CandidateFinder refactoring TemporalTypeException: Unsupported field: Year